fixed z-index in auction show

--- a/app/assets/stylesheets/auction.css.scss
+++ b/app/assets/stylesheets/auction.css.scss
@@ -57,7 +57,6 @@
   padding: 10px;
   text-align: center;
   position: relative;
-  z-index: -10;
 }
 
 .you-highest {
