--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -1,24 +1,3 @@
-/*
-cool blue:
-#383838
-light blue:
-#B4E0E8
-glow blue:
-#7C9A9F;
-red:
-#F20505
-pale:
-#F2F2F2
-
-*/
-
-/*
-aller: aller_lightregular;
-titilliumboldest: titilliumtext25l800_wt;
-tittilliubolder: titilliumtext25l600_wt
-tittillium: titilliumtext25l250_wt;
-*/
-
 .backNav {
   width: 100%;
   height: 60px;
